refactor: change structure of the project

--- a/index.html
+++ b/index.html
@@ -1,1 +1,132 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+	<title>Severin Ilya</title>
+
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link rel="stylesheet" type="text/css" href="resume.css" />
+
+</head>
+<body>
+
+<div id="doc2" class="yui-t7">
+	<div id="inner">
+	
+		<div id="hd">
+			<div class="yui-gc">
+				<div class="yui-u first">
+					<h1>Severin Ilya</h1>
+					<img src=https://lastfm.freetls.fastly.net/i/u/300x300/aaa7b3821eac0f1d6165c2443708820d.jpg >
+				</div>
+
+				<div class="yui-u">
+					<div class="contact-info">
+						<h3><a href="mailto:ilyaseverin1998@gmail.com">ilayseverin1998@gmail.com</a></h3>
+						<h3><a href="https://t.me/NeUhodyashiy">Telegram</a></h3>
+						<h3></h3>
+					</div><!--// .contact-info -->
+				</div>
+			</div><!--// .yui-gc -->
+		</div><!--// hd -->
+
+		<div id="bd">
+			<div id="yui-main">
+				<div class="yui-b">
+
+					<div class="yui-gf">
+						<div class="yui-u first">
+							<h2>About myself</h2>
+						</div>
+							<p>
+								I am a beginner programmer and I want to work in the IT field, but since I do not have work experience yet, I strive for new knowledge 
+							</p>
+						</div>
+					</div><!--// .yui-gf -->
+
+					<div class="yui-gf">
+						<div class="yui-u first">
+							<h2>Skills</h2>
+						</div>
+						<div class="yui-u">
+
+								<div>
+									<p>Basic knowledge of С++, С#, java, javascript, HTML/Css, SQL	</p>
+								</div>
+						</div>
+					</div><!--// .yui-gf -->
+
+					<div class="yui-gf">
+						<div class="yui-u first">
+							<h2>Sample code</h2>
+						</div>
+						<div class="yui-u">
+							<p>
+								<pre>
+									<code>
+function capital(capitals){
+    var returnArr = [];
+	  for (var i = 0; i < capitals.length; i++) {
+		 var str = 'The capital of '
+			   + (capitals[i].state || capitals[i].country)
+			   + ' is '
+			   + capitals[i].capital;
+		 returnArr.push(str);
+	  }
+    return returnArr;
+ }
+									</code>
+								</pre>
+							</p>
+						</div>
+					</div><!--// .yui-gf-->
+
+					<div class="yui-gf">
+	
+						<div class="yui-u first">
+							<h2>Work experience</h2>
+						</div><!--// .yui-u -->
+
+					</div><!--// .yui-gf -->
+
+					<div class="yui-gf">
+						<div class="yui-u first">
+							<h2>Education</h2>
+						</div>
+
+						<div class="yui-u">
+							<p>Finished basic courses at the university in С++, С#, java, javascript, HTML/Css, mySQL in the Belarusian State University of Transport</p>
+						</div>
+
+					</div><!--// .yui-gf -->
+					
+				</div><!--// .yui-gf -->
+
+					<div class="yui-gf last">
+						<div class="yui-u first">
+							<h2>English language</h2>
+						</div>
+						<div class="yui-u">
+							<p>Level: A2</p>
+						</div>
+					</div><!--// .yui-gf -->
+
+
+				</div><!--// .yui-b -->
+			</div><!--// yui-main -->
+		</div><!--// bd -->
+
+		
+
+	</div><!-- // inner -->
+
+
+</div><!--// doc -->
+
+
+</body>
+</html>
+
 
