refactor: change structure of the project

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<h2>About myself</h2>
 						</div>
 							<p>
-								I am a beginner programmer and I want to work in the IT field, but since I do not have work experience yet, I strive for new knowledge 
+								I am a beginner programmer and I want to work in the IT-sphere, but since I do not have work experience yet, I strive for new knowledge 
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
