--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Severin Ilya</title>
 
 	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1024, initial-scale=1">
 
 	<link rel="stylesheet" type="text/css" href="resume.css" />
 
