refactor: change structure of the project

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 </head>
 
-<body class="inner">
+<body>
 
 	
-		<div >
+		<div class="inner">
 
 			<header>
 					<div >
@@ -100,16 +100,16 @@ function capital(capitals){
 			</section>
 		</div>
 <footer>
-				<nav>
-					<table  cellpadding="5" cellspacing="0" align="center"> 
-						<tr>
-							<td><a href="https://rs.school/js/"><img class="footer_img" src=https://rs.school/images/rs_school_js.svg></td>
-							<td><a href="https://www.youtube.com/channel/UCUgmHbk1rTFaf4GGKQ1OXfQ"><img class="footer_img" src=https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg></td>
-							<td><a href="https://github.com/ilyaseverin/rsschool-cv"><img class="footer_img"  src=https://www.pikpng.com/pngl/m/256-2562286_github-logo-png-github-clipart.png></td>
-						</tr>
-					</table>
-				</nav>
-			</footer>
+	<nav>
+		<table  cellpadding="5" cellspacing="0" align="center"> 
+			<tr>
+				<td><a href="https://rs.school/js/"><img class="footer_img" src=https://rs.school/images/rs_school_js.svg></a></td>
+				<td><a href="https://www.youtube.com/channel/UCUgmHbk1rTFaf4GGKQ1OXfQ"><img class="footer_img" src=https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg></a></td>
+				<td><a href="https://github.com/ilyaseverin/rsschool-cv"><img class="footer_img"  src=https://www.pikpng.com/pngl/m/256-2562286_github-logo-png-github-clipart.png></a></td>
+			</tr>
+		</table>
+	</nav>
+</footer>
 
 
 </body>
