refactor: change structure of the project

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
 			<section>
-				<h2>About my</h2>
+				<h2>About me</h2>
 				<p>
 					I am a beginner programmer and I want to work in the IT-sphere, but since I do not have
 					work experience yet, I strive for new knowledge
