refactor: change structure of the project

--- a/index.html
+++ b/index.html
@@ -14,22 +14,28 @@
 
 <body>
 
-	
+	<main>
 		<div class="inner">
 
 			<header>
-					<div >
-						<h1>Severin Ilya</h1>
-						
-							<nav>
-								<ul>
-									
-									<img class="avatar" src=https://lastfm.freetls.fastly.net/i/u/300x300/aaa7b3821eac0f1d6165c2443708820d.jpg>
-									<li><h3><a class="click" href="mailto:ilyaseverin1998@gmail.com">ilayseverin1998@gmail.com</a></h3></li>
-									<li><h3><a class="click" href="https://t.me/NeUhodyashiy">Telegram</a></h3></li>
-								</ul>
-							</nav>
-					</div>
+				<div>
+					<h1>Severin Ilya</h1>
+
+					<nav>
+						<img class="avatar"
+							src=https://lastfm.freetls.fastly.net/i/u/300x300/aaa7b3821eac0f1d6165c2443708820d.jpg
+							alt="#">
+						<ul>
+							<li>
+								<h3><a class="click"
+										href="mailto:ilyaseverin1998@gmail.com">ilayseverin1998@gmail.com</a></h3>
+							</li>
+							<li>
+								<h3><a class="click" href="https://t.me/NeUhodyashiy">Telegram</a></h3>
+							</li>
+						</ul>
+					</nav>
+				</div>
 			</header>
 
 
@@ -46,19 +52,27 @@
 
 			<section class="section">
 				<h2>Skills</h2>
-					<div >
-						<p>Basic knowledge of С++, С#, java, javascript, HTML/Css, SQL </p>
-					</div>
+				<div>
+					<p>Basic knowledge of:</p>
+					<ul class="skills">
+						<li>С++</li>
+						<li>С#</li>
+						<li>java</li>
+						<li>javascript</li>
+						<li>HTML/Css</li>
+						<li>SQL </li>
+					</ul>
+				</div>
 			</section>
 
 			<section class="section">
 				<h2>Sample code</h2>
-					<div >
-							<pre>
+				<div>
+					<pre>
 									<code>
 function capital(capitals){
     var returnArr = [];
-	  for (var i = 0; i < capitals.length; i++) {
+	  for (var i = 0; i &lt; capitals.length; i++) {
 		 var str = 'The capital of '
 			   + (capitals[i].state || capitals[i].country)
 			   + ' is '
@@ -69,7 +83,7 @@ function capital(capitals){
  }
 									</code>
 							</pre>
-					</div>
+				</div>
 			</section>
 
 			<section class="section">
@@ -82,10 +96,10 @@ function capital(capitals){
 
 			<section class="section">
 				<h2>Education</h2>
-					<div >
-						<p>Finished basic courses at the university in С++, С#, java, javascript, HTML/Css, mySQL in
-							the Belarusian State University of Transport</p>
-					</div>
+				<div>
+					<p>Finished basic courses at the university in С++, С#, java, javascript, HTML/Css, mySQL in
+						the Belarusian State University of Transport</p>
+				</div>
 			</section>
 
 
@@ -94,24 +108,30 @@ function capital(capitals){
 				<div class="yui-u first">
 					<h2>English language</h2>
 				</div>
-				<div >
+				<div>
 					<p>Level: A2</p>
 				</div>
 			</section>
+			<footer>
+				<nav>
+					<table>
+						<tr>
+							<td><a href="https://rs.school/js/"><img class="footer_img"
+										src=https://rs.school/images/rs_school_js.svg alt="#"></a></td>
+							<td><a href="https://www.youtube.com/channel/UCUgmHbk1rTFaf4GGKQ1OXfQ"><img
+										class="footer_img"
+										src=https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg
+										alt="#"></a></td>
+							<td><a href="https://github.com/ilyaseverin/rsschool-cv"><img class="footer_img"
+										src=https://www.pikpng.com/pngl/m/256-2562286_github-logo-png-github-clipart.png
+										alt="#"></a></td>
+						</tr>
+					</table>
+				</nav>
+			</footer>
+
 		</div>
-<footer>
-	<nav>
-		<table  cellpadding="5" cellspacing="0" align="center"> 
-			<tr>
-				<td><a href="https://rs.school/js/"><img class="footer_img" src=https://rs.school/images/rs_school_js.svg></a></td>
-				<td><a href="https://www.youtube.com/channel/UCUgmHbk1rTFaf4GGKQ1OXfQ"><img class="footer_img" src=https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg></a></td>
-				<td><a href="https://github.com/ilyaseverin/rsschool-cv"><img class="footer_img"  src=https://www.pikpng.com/pngl/m/256-2562286_github-logo-png-github-clipart.png></a></td>
-			</tr>
-		</table>
-	</nav>
-</footer>
-
-
+	</main>
 </body>
 
 </html>
